--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  background-color: #F3F3F7;
-  font-family: 'Bungee', cursive;
-  font-family: 'Source Sans Pro', sans-serif;
+  background-color: #f3f3f7;
+  font-family: "Outfit", sans-serif;
 }
